--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+:root {
+    --bg-clr: #2F2F2F;
+    --nav-txt-clr: #f5f5f7;
+    --txt-clr: white;
+    --card-title-clr: white;
+    --card-subtitle-clr: #888078;
+}
+
 body {
     margin-left: 135px;
     margin-right: 135px;
     min-width: 460px;
     font-family: 'Poppins', sans-serif;
+    background-color: var(--bg-clr);
+    color: var(--txt-clr);
 }
 
 @media only screen and (max-width: 900px) {
@@ -75,18 +85,36 @@ body {
     margin-top: -20px;
 }
 
+#loadedNav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--bg-clr);
+    padding-top: 0px;
+    padding-bottom: 0.7px;
+}
+
+#about-me {
+    position: static;
+}
+
 #nav {
     margin-bottom: 20px;
-    background-color: rgb(141, 138, 138);
-    color: white;
-    padding: 10px;
-    border-radius: 20px;
+    /* background-color: rgb(141, 138, 138); */
+    text-align: center;
+    position: -webkit-sticky;
+    position: sticky;
 }
 
 #nav-links {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 20px;
 }
 
 .nav-link {
@@ -97,15 +125,17 @@ body {
     border-radius: 15px;
     padding: 7.5px;
     text-decoration: none;
-    color: white;
+    color: var(--nav-txt-clr);
+    opacity: 0.8;
     font-size: 14px;
     transition: ease-in-out 0.5s;
     /* font-weight: 650; */
 }
 
 .nav-link:hover, .nav-link:focus {
-    background-color: white;
-    color: black;
+    /* background-color: white; */
+    color: var(--txt-clr);
+    opacity: 1;
 }
 
 .nav-link-active {
@@ -126,40 +156,39 @@ body {
 
 .card {
     margin-right: 10px;
-    text-align: center;
     padding: 20px;
-    height: fit-content;
-    margin-bottom: 5px;
     display: flex;
     align-items: center;
+    color: white;
     width: 100%;
 }
 
 .card img {
     border-radius: 5px;
     float: left;
+    width: 200px;
+    height: max-content;
 }
 
 .card-right {
     float: right;
-    text-align: center;
     margin-left: 20px;
 }
 
 .title {
     font-size: 21px;
     margin-bottom: -10px;
-    color: black;
+    color: var(--card-title-clr);
 }
 
 .subtitle {
     font-size: 17px;
-    color: #888078;
+    color: var(--card-subtitle-clr);
     margin-top: -10px;
 }
 
 .subtitle a {
-    color: #888078;
+    color: var(--card-subtitle-clr);
 }
 
 /* Certificate */
@@ -172,10 +201,75 @@ body {
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-self: center;
+    align-items: center;
 }
 
 .certificate {
     width: 400px;
     margin-right: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+    overflow: scroll;
+}
+
+#img-preview {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    width: 800px;
+}
+
+/* Scroll Bar */
+
+/* Bar */
+::-webkit-scrollbar {
+    width: 15px;
+    border: 2px solid blue;
+}
+
+/* Path End Arrows
+::-webkit-scrollbar-button:single-button {
+    color: var(--txt-clr);
+    height: 16px;
+    width: 16px;
+} */
+
+/* Scrollable Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(155, 155, 155);
+    border-radius: 200px;
+}
+
+/* ::-webkit-scrollbar-track but where the bar is not present */
+::-webkit-scrollbar-track {
+    background: var(--bg-clr);
+    border: none;
+}
+
+/* Where Horizontal and Vertical Meet */
+::-webkit-scrollbar-corner{
+    background: var(--bg-clr);
+    display: none;
+}
+
+/* Resizer
+::-webkit-resizer {
+    background: black;
+} */
