--- a/styles.css
+++ b/styles.css
@@ -154,16 +154,52 @@ a {
     border-radius: 200px;
 }
 
+@media only screen and (min-width: 1280px) {
+    #about-me-image {
+        margin-top: -30px;
+    }
+}
+
+@media only screen and (max-width: 1280px) {
+    #about-me-logo {
+        display: none;
+    }
+
+    #about-me-image {
+        width: 100px !important;
+    }
+
+    #about-me {
+        display: flex;
+        justify-content: center;
+    }
+
+    #about-me-top-inner {
+        margin-top: 0;
+        margin-left: 10px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #about-me-image {
+        width: 50px !important;
+        align-self: center;
+    }
+
+    #about-me-top-inner {
+        margin-top: 0;
+        margin-left: 0px;
+    }
+
+    #nav {
+        display: none;
+    }
+}
+
 #about-me-name {
     font-size: 19px;
     font-weight: 700;
 }
-
-/* #about-me-job {
-    font-size: 33px;
-    font-weight: 700;
-    margin-top: 10px;
-} */
 
 #loadedNav {
     position: sticky;
@@ -174,6 +210,61 @@ a {
     background-color: var(--bg-clr);
     padding-top: 0px;
     padding-bottom: 0.7px;
+}
+
+#mobile-nav {
+    text-align: center;
+    font-size: 20px;
+    margin-top: -20px;
+}
+
+@media only screen and (min-width: 500px) {
+    #mobile-nav {
+        display: none;
+    }
+}
+
+#mobile-nav-menu-opener {
+    font-size: 25px;
+}
+
+#mobile-nav-links-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0);
+    z-index: 3;
+    cursor: pointer;
+}
+
+#mobile-nav-links {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    color: white;
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+
+#mobile-nav-links > .nav-link {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#mobile-nav-links > .nav-link:nth-child(1) {
+    margin-top: -10px;
+    margin-left: -40px;
+}
+
+#mobile-nav-menu-closer {
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 30px;
 }
 
 #nav {
@@ -246,13 +337,19 @@ a {
     color: white !important;
 }
 
+@media only screen and (max-width: 1280px) {
+    #nav-skip-to-content {
+        display: none;
+    }
+}
+
 /* Cards */
 
 #cards {
     display: inline-flex;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 55%;
+    width: 80%;
 }
 
 .card {
